[BDN-748] Add OpenAPI Spec for line_items import
